--- a/src/components/Tabs/Tabs.module.scss
+++ b/src/components/Tabs/Tabs.module.scss
@@ -1,19 +1,19 @@
 $bg-color: #ffffff;
 $active: #2196f3;
-$font-color: #4a4a4a;
+$font: #4a4a4a;
 
-.tabs-container {
+.container {
   display: flex;
   width: 100%;
   height: 50px;
 }
 
-.tabs-button {
+.button {
   font-weight: 600;
   flex-grow: 1;
   background-color: $bg-color;
   border: 1px solid #dfe5ec;
-  color: $font-color;
+  color: $font;
   transition: 200ms;
   cursor: pointer;
   line-height: 20px;
@@ -21,16 +21,16 @@ $font-color: #4a4a4a;
   text-transform: uppercase;
 }
 
-.tabs-button:first-child {
+.button:first-child {
   border-radius: 5px 0 0 5px;
 }
 
-.tabs-button:last-child {
+.button:last-child {
   border-radius: 0 5px 5px 0;
 }
 
-.tabs-button:hover,
-.tabs-button:active {
+.button:hover,
+.button:active {
   background-color: $active;
   color: $bg-color;
 }
