--- a/src/components/Ticket/Ticket.module.scss
+++ b/src/components/Ticket/Ticket.module.scss
@@ -20,31 +20,32 @@ $gray: #a0b0b9;
   margin: 0;
 }
 
-.ticket-price {
+.price {
+  display: flex;
+  align-items: center;
   grid-column: 1 / 3;
   font-size: 24px;
   line-height: 24px;
   color: $blue;
 }
 
-.ticket-price,
-.ticket-img-container {
+.container {
   display: flex;
   align-items: center;
 }
 
-.ticket-item-attr {
+.attr {
   color: $gray;
   line-height: 18px;
   letter-spacing: 0.5px;
 }
 
-.ticket-item-value {
+.value {
   font-size: 14px;
   line-height: 21px;
 }
 
-.ticket-img {
+.img {
   width: 110px;
   height: 36px;
 }
