--- a/src/components/Sidebar/Sidebar.module.scss
+++ b/src/components/Sidebar/Sidebar.module.scss
@@ -1,5 +1,6 @@
 $bg-color: #ffffff;
 $hover: #f1fcff;
+$gray: #4a4a4a;
 
 .sidebar {
   margin-right: 20px;
@@ -20,12 +21,14 @@ $hover: #f1fcff;
   padding: 0px;
 }
 
-.title {
+.legend {
   padding-left: 20px;
   line-height: 12px;
   letter-spacing: 0.5px;
   margin-bottom: 10px;
   text-transform: uppercase;
+  font-size: 12px;
+  color: $gray;
 }
 
 .label {
