--- a/src/components/Tabs/Tabs.module.scss
+++ b/src/components/Tabs/Tabs.module.scss
@@ -18,6 +18,7 @@ $font: #4a4a4a;
   line-height: 20px;
   letter-spacing: 0.5px;
   text-transform: uppercase;
+  color: $font;
 }
 
 .button:first-child {
@@ -28,15 +29,14 @@ $font: #4a4a4a;
   border-radius: 0 5px 5px 0;
 }
 
-.button:hover,
-.button:active {
+.button:hover {
   background-color: $active;
   color: $bg-color;
   outline: none;
 }
 
 .button-selected {
-  border-color: $active;
+  background-color: $active;
   color: $bg-color;
   outline: none;
 }
