--- a/src/components/Tabs/Tabs.module.scss
+++ b/src/components/Tabs/Tabs.module.scss
@@ -35,7 +35,7 @@ $font: #4a4a4a;
   outline: none;
 }
 
-.button-selected {
+.selected {
   background-color: $active;
   color: $bg-color;
   outline: none;
