--- a/src/components/Tabs/Tabs.module.scss
+++ b/src/components/Tabs/Tabs.module.scss
@@ -6,37 +6,37 @@ $font: #4a4a4a;
   display: flex;
   width: 100%;
   height: 50px;
-}
 
-.button {
-  font-weight: 600;
-  flex-grow: 1;
-  background-color: $bg-color;
-  border: 1px solid #dfe5ec;
-  transition: 200ms;
-  cursor: pointer;
-  line-height: 20px;
-  letter-spacing: 0.5px;
-  text-transform: uppercase;
-  color: $font;
-}
+  button {
+    font-weight: 600;
+    flex-grow: 1;
+    background-color: $bg-color;
+    border: 1px solid #dfe5ec;
+    color: $font;
+    transition: 200ms;
+    cursor: pointer;
+    line-height: 20px;
+    letter-spacing: 0.5px;
+    text-transform: uppercase;
+  }
 
-.button:first-child {
-  border-radius: 5px 0 0 5px;
-}
+  button:first-child {
+    border-radius: 5px 0 0 5px;
+  }
 
-.button:last-child {
-  border-radius: 0 5px 5px 0;
-}
+  button:last-child {
+    border-radius: 0 5px 5px 0;
+  }
 
-.button:hover {
-  background-color: $active;
-  color: $bg-color;
-  outline: none;
-}
+  button:hover {
+    background-color: $active;
+    color: $bg-color;
+    outline: none;
+  }
 
-.selected {
-  background-color: $active;
-  color: $bg-color;
-  outline: none;
+  .active {
+    background-color: $active;
+    color: $bg-color;
+    outline: none;
+  }
 }
